Finally able to print

--- a/macro.cfg
+++ b/macro.cfg
@@ -16,12 +16,12 @@
 [gcode_macro PRINT_START]
 description: All cmd needed at print start
 variable_var: {'temp'        : {'extruder': 245.0, 'bed': 100.0, 'chamber': 40.0, 'endstop': 0.0},
-               'delta'       : {'chamber': 5.0, 'bed': 10},
-               'time'        : {'soak' : 1800, 'soak_extra': 900},
-               'redo_qgl'    : True,
+               'delta'       : {'chamber': 10.0, 'bed': 30},
+               'time'        : {'soak' : 600, 'soak_extra': 400},
+               'redo_qgl'    : False,
                'prime_height': 0.0,
                'z_adjust'    : 0.0,
-               'filter'      : True}
+               'filter'      : False}
 ## Valid state 
 ##   Prepare    : Store Params
 ##   HeatBed    : heat up bed and decide if soak is needed 
@@ -41,22 +41,22 @@ gcode:
                            'bed'     : params.BED_TEMP|default(100)|float|round(1),
                            'chamber' : params.CHAMBER_TEMP|default(50)|float|round(1),
                            'endstop' : 0.0},
-                  'delta': {'chamber': params.DELTA_C|default(5)|float|round(1), 
-                            'bed'    : params.DELTA_B|default(10)|float|round(1)},
-                  'time' : {'soak'      : params.SOAK|default(30)|int * 60,
-                            'soak_extra': params.CHAMBER_SOAK|default(15)|int * 60 if params.EXTRA_SOAK|default('true') == 'true' and 
+                  'delta': {'chamber': params.DELTA_C|default(10)|float|round(1), 
+                            'bed'    : params.DELTA_B|default(20)|float|round(1)},
+                  'time' : {'soak'      : params.SOAK|default(5)|int * 60,
+                            'soak_extra': params.CHAMBER_SOAK|default(5)|int * 60 if params.EXTRA_SOAK|default('true') == 'true' and 
                                                                                       user.hw.chamber.ena 
                                           else 0},
-               'redo_qgl'    : True,
+               'redo_qgl'    : False,
                'prime_height': params.LAYER_HEIGHT|float * user.print_start.prime_mult|float if LAYER_HEIGHT in params
                           else user.prime.pos.z|float,
                'z_adjust'    : params.Z_ADJUST|default(0.0)|float,
                'filter'      : False if params.FILTER|default(1)|int == 0 else True} %}
-    {% if user.hw.relay,ena %} _HEATER_ON {% endif %}
+    #{% if user.hw.relay,ena %} _HEATER_ON {% endif %}
     {% if user.hw.caselight.ena %} _CASELIGHT_ON {% endif %}             # switch on light
-    {% if user.hw.display.ena %} _LCD_KNOB COLOR=RED BLINK=1 {% endif %}
-    {% if user.hw.chamber.fan %} M141 S0  {% endif %}                    # exhaust fan off
-    {% if user.hw.filter.ena and var.filter %} _FILTER_ON {% endif %}    # activate filter
+    #{% if user.hw.display.ena %} _LCD_KNOB COLOR=RED BLINK=1 {% endif %}
+    #{% if user.hw.chamber.fan %} M141 S0  {% endif %}                    # exhaust fan off
+    #{% if user.hw.filter.ena and var.filter %} _FILTER_ON {% endif %}    # activate filter
     _CG28                                                                # home if needed
     G90                                                                  # absolute position
     G0 Z{user.park.bed.z} F{user.speed.z_hop}                            # move nozzle to z high first
