--- a/pressure_advance.cfg
+++ b/pressure_advance.cfg
@@ -118,7 +118,7 @@ gcode:
   {% endif %}
 
 [gcode_macro PRESSURE_ADVANCE_REMOVE]
-description: Remove a filament or a nezzle setup
+description: Remove a filament or a nozzle setup
 gcode:
   {% if 'FILAMENT' not in params|upper %}
     {action_respond_info("PRESSURE ADVANCE: FILAMENT must be defined use \"PRESSURE_ADVANCE_REMOVE FILAMENT=id\" as a minimum")}
