--- a/printer.cfg
+++ b/printer.cfg
@@ -70,7 +70,7 @@ square_corner_velocity: 5.0
 [include webclient.cfg]
 
 # # Power relays
-[include power.cfg]
+#[include power.cfg]
 
 #  print and service time storage
 [include printtime.cfg]
@@ -209,17 +209,17 @@ gcode:
   ##### Purge & Brush #####
   {% set user_brush_pos = 'right' %}           # left/right profile used
   #{% set user__brush_x_middle = 100 %}        # mid point of brush at left profile
-  {% set user_brush_x_middle = 250 %}          # mid point of brush at right profil
-  {% set user_brush_x_width = 40 %}            # width of brush
-  {% set user_brush_y_start = 351 %}           # start point at y
-  {% set user_wipe_z = 1.0 %}                  # z for wipe moves
+  {% set user_brush_x_middle = 136 %}          # mid point of brush at right profil
+  {% set user_brush_x_width = 35 %}            # width of brush
+  {% set user_brush_y_start = 305 %}           # start point at y
+  {% set user_wipe_z = -1 %}                  # z for wipe moves
   {% set user_wipe_cnt = 5 %}                  # number of full wipes
   {% set user_z_purge = 2.5 %}                 # z above purge bucket
   ##### PRINT_START/STOP #####
   {% set user_print_start_bed_up = 10 %}       # bed temp raise for faster heat soak
   {% set user_print_start_ival = 1 %}          # wait time per call in sec
-  {% set user_print_start_extruder_time = 3 %} # time in minutes before soak end to start extruder heating 
-  {% set user_print_start_bed_time = 3 %}      # time in minutes before soak end to set bed target temp
+  {% set user_print_start_extruder_time = 0.5 %} # time in minutes before soak end to start extruder heating 
+  {% set user_print_start_bed_time = 0.5 %}      # time in minutes before soak end to set bed target temp
   {% set user_print_start_prime_mult = 2 %}    # multiplier for prime line hight 
   {% set user_unload_sd = True %}              # unload sd file at PRINT_END or CANCEL_PRINT [True,False]
   ##### Prime Line #####
@@ -263,9 +263,9 @@ gcode:
                                          else 'motion' if 'filament_motion_sensor runout' in printer.configfile.settings
                                          else 'file'   if 'save_variables' in printer and filament_loaded in printer.save_variables.variables 
                                          else 'none'},
-                  #  'relay'         : {'ena' : True if 'output_pin extruder_relay'   in printer.configfile.settings and
-                  #                                     'output_pin heater_bed_relay' in printer.configfile.settings 
-                   'relay'         : {'ena' : False},
+                   'relay'         : {'ena' : True if 'output_pin extruder_relay' in printer.configfile.settings and
+                                                      'output_pin heater_bed_relay' in printer.configfile.settings 
+                                         else False},
                    'auto_z_offset' : {'type': 'z_calib+flexplate' if 'z_calibration' in printer and 'save_variables' in printer and 'plates' in printer.save_variables.variables
                                          else 'z_calib'           if 'z_calibration' in printer
                                          else 'flexplate'         if 'save_variables' in printer and 'plates' in printer.save_variables.variables 
