First major progress
Finally getting things to a good place.  Have Status LEDs working.  Fixed idle_timeout issue, and z_offset issue.

--- a/bed_mesh.cfg
+++ b/bed_mesh.cfg
@@ -36,6 +36,7 @@ relative_reference_index: 24
 description: Perform QGL and bed mesh leveling
 rename_existing: BED_MESH_CALIBRATE_BASE
 gcode:
+  status_meshing
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
   {% if "xyz" not in printer.toolhead.homed_axes %} G28 {% endif %}
   BED_MESH_CLEAR
