--- a/filament.cfg
+++ b/filament.cfg
@@ -88,6 +88,7 @@ gcode:
 [gcode_macro NOZZLECLEAN]
 description: Move to bucket and purge and scrub nozzle
 gcode:
+  status_cleaning
   {% set user   = printer['gcode_macro _USER_VARIABLE'] %}
   {% set pos    = user.purge.purge %}
   {% set move_z = [user.z_hop,printer.toolhead.position.z]|max %} # calc movement high
@@ -114,10 +115,12 @@ gcode:
   {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set it back to relative
   {% if printer.gcode_move.absolute_extrude %}         M82 {% endif %} # set it back to absolute
   SET_GCODE_OFFSET Z={printer.gcode_move.homing_origin.z} MOVE=1
+  status_ready
 
 [gcode_macro _WIPE]
 description: Helper: Wipe nozzle at bucket
 gcode: 
+  status_cleaning
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
   {% set wipe     = user.purge.wipe %}
   G90 # absolute positioning
@@ -128,6 +131,7 @@ gcode:
     {% endfor %}
   {% endfor %}
   G0 X{wipe.end.x} Y{wipe.end.y} Z{wipe.end.z}
+  status_ready
     
 [gcode_macro PRIME_LINE]
 description: Purge nozzle at defined position
