--- a/homing.cfg
+++ b/homing.cfg
@@ -5,6 +5,7 @@
 axes: z
 set_position_z: 0
 gcode:
+  status_homing
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
   {% set home_x, home_y, home_z = False, False, False %} # define what axes need to be homed
   {% if params.X is not defined and params.Y is not defined and params.Z is not defined %} # G28
@@ -24,7 +25,8 @@ gcode:
   {% if home_x %} G28 X   {% endif %}                 # home X
   {% if home_y %} G28 Y   {% endif %}                 # home Y
   {% if home_z %} _HOME_Z {% endif %}                 # home Z
-  _SET_ACC                                            # set accel and accel_to_decel back to cfg value
+  _SET_ACC
+  status_ready                                            # set accel and accel_to_decel back to cfg value
   
 [gcode_macro _HOME_Z]
 description: Helper: z homing
@@ -67,7 +69,11 @@ gcode:
 [gcode_macro _CG28]
 description: Helper: Conditional homing
 gcode:
-  {% if "xyz" not in printer.toolhead.homed_axes %} G28 {% endif %}
+  {% if "xyz" not in printer.toolhead.homed_axes %} 
+    status_homing
+    G28
+  {% endif %}
+  status_ready
 
 [gcode_macro _SET_Z_CURRENT]
 description: Helper: Set Z-drive motor current
