--- a/macro.cfg
+++ b/macro.cfg
@@ -68,6 +68,7 @@ gcode:
     UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION=0.5
   ##############################  HeatBed Phase heat up the bed  ##############################    
   {% elif state == 'HeatBed' %}
+    status_heating
     # get max allow bed temp from config. Lower it by 5C to avoid shutdown
     {% set cfg_bed_max = printer.configfile.settings.heater_bed.max_temp|float|round(1) - 5.0 %}
     {% set targetBed = var.temp.bed - var.delta.bed %}
@@ -101,6 +102,7 @@ gcode:
   ##############################  Heatsoak Phase call the delay macro until time is over  ##############################
   {% elif state == 'HeatSoak' %}
     #############  Get filament runout info  #############
+    status_heating
     {% if user.hw.runout.sensor %}
       {% if printer["filament_" + user.hw.runout.type + "_sensor runout"].enabled|lower == 'true' %}
         {% set filament_detected = printer["filament_" + user.hw.runout.type + "_sensor runout"].filament_detected %}
@@ -118,6 +120,7 @@ gcode:
       {% if var.time.soak <= (user.print_start.time.extruder + var.temp.extruder - 240) and 
              var.temp.extruder != printer.extruder.target %} # check time to start heating extruder
         M104 S{var.temp.extruder} # heat extruder
+        
       {% endif %}
       {% if var.time.soak <= user.print_start.time.bed and bed != printer.heater_bed.target|int %}  # check time to reduce bed temp
         M140 S{var.temp.bed} # heat bed
@@ -139,6 +142,7 @@ gcode:
     {% endif %}
   ##############################  Decide if extended soaking is needed  ##############################
   {% elif state == 'Chamber' %}
+    status_heating
     {% set targetChamber = var.temp.chamber - var.delta.chamber %}
     {% set actChamber = printer["temperature_" + user.hw.chamber.type + " chamber"].temperature|round(1) if user.hw.chamber.ena
                    else 0 %}
@@ -156,6 +160,7 @@ gcode:
     {% endif %}
   ############################## extra Heat Soak terminated by chamber temp  ##############################
   {% elif state == 'ChamberSoak' %}
+    status_heating
     {% set targetChamber = var.temp.chamber - var.delta.chamber %}
     {% set actChamber = printer["temperature_" + user.hw.chamber.type + " chamber"].temperature|round(1) if user.hw.chamber.ena
                    else 0 %}
@@ -174,6 +179,7 @@ gcode:
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=var VALUE="{var}"
   ##############################  all whats need to run at the end  ##############################
   {% elif state == 'Final' %}
+    status_heating
     RESUME_BASE
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Prepare"' # set state for next print    
     {% if user.hw.display.ena %} _LCD_KNOB COLOR=RED  {% endif %}
@@ -196,6 +202,7 @@ gcode:
     G90                                                 # use absolute coordinates
     M83                                                 # use relative distances for extrusion
     UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=1
+    status_busy
   {% endif %}    
  
 [delayed_gcode _START_PRINT_WAIT]
@@ -210,7 +217,7 @@ gcode:
   {% endif %}
   # Check CANCLE_PRINT was executed
   {% if printer['gcode_macro CANCEL_PRINT'].execute|lower == 'false' %}
-    PRINT_START  # Junp back to PRINT_START
+    PRINT_START  # Jump back to PRINT_START
   {% else %} # break loop and insure state is correct for the next print start
     SET_GCODE_VARIABLE MACRO=CANCEL_PRINT VARIABLE=execute VALUE=False
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Prepare"'
@@ -260,6 +267,7 @@ gcode:
   {% if user.unload_sd|lower == 'true' %} UPDATE_DELAYED_GCODE ID=_DELAY_SDCARD_RESET_FILE DURATION=10 {% endif %}
   UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=10
   RESTORE_GCODE_STATE NAME=STATE_PRINT_END
+  status_ready
   M220 S100 # set feedrate percentage back to default
   M221 S100 # set speed percentage back to default
 
