--- a/power.cfg
+++ b/power.cfg
@@ -3,18 +3,18 @@
 #####################################################################
 [idle_timeout]
 gcode:
-  {% if printer.webhooks.state|lower == 'ready' %}
-    {% if printer.pause_resume.is_paused|lower == 'false' %}
-      {action_respond_info("POWER: Execute Idle Timeout")}
-      TURN_OFF_HEATERS
-      {% if printer['gcode_macro _USER_VARIABLE'].hw.relay.ena %}
-        UPDATE_DELAYED_GCODE ID=_DELAY_HEATER_OFF DURATION=10
-      {% endif %}
-      UPDATE_DELAYED_GCODE ID=_DELAY_PSU_OFF DURATION=20
-    {% endif %}
-  {% endif %}
-# 2h timeout
-timeout: 7200
+  # {% if printer.webhooks.state|lower == 'ready' %}
+  #   {% if printer.pause_resume.is_paused|lower == 'false' %}
+  #     {action_respond_info("POWER: Execute Idle Timeout")}
+  #     TURN_OFF_HEATERS
+  #     {% if printer['gcode_macro _USER_VARIABLE'].hw.relay.ena %}
+  #       UPDATE_DELAYED_GCODE ID=_DELAY_HEATER_OFF DURATION=30
+  #     {% endif %}
+  #     UPDATE_DELAYED_GCODE ID=_DELAY_PSU_OFF DURATION=30
+  #   {% endif %}
+  # {% endif %}
+  # 2h timeout
+  timeout: 7200
 
 #####################################################################
 #  Safety Relay extruder
