--- a/probe_qgl.cfg
+++ b/probe_qgl.cfg
@@ -103,6 +103,7 @@ max_adjust: 8
 description: Conform a moving, twistable gantry to the shape of a stationary bed
 rename_existing: QUAD_GANTRY_LEVEL_BASE
 gcode:
+  status_leveling
   {% set user   = printer['gcode_macro _USER_VARIABLE'] %}
   {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %} # calc movement high
   _SET_Z_CURRENT VAL=HOME
@@ -121,6 +122,7 @@ gcode:
     G0 X{user.park.bed.x} Y{user.park.bed.y} Z{user.park.bed.z} F{user.speed.travel}
   {% endif %}
   {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
+  status_ready
 
 [gcode_macro CHECK_QGL]
 description: Run after QUAD_GANTRY_LEVEL to insure it passes
