--- a/webclient.cfg
+++ b/webclient.cfg
@@ -58,6 +58,7 @@ gcode:
   {% if user.hw.filter.ena %} UPDATE_DELAYED_GCODE ID=_DELAY_FILTER_OFF DURATION={filter_off} {% endif %}
   {% if user.unload_sd %} UPDATE_DELAYED_GCODE ID=_DELAY_SDCARD_RESET_FILE DURATION=10 {% endif %}
   UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=10
+  status_ready
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
@@ -94,6 +95,7 @@ gcode:
   G90
   G0 Z{pos.z} F{user.speed.z_hop}
   G0 X{pos.x} Y{pos.y} F{user.speed.travel}
+  status_ready
 
 [gcode_macro RESUME]
 description: Resume the actual running print
