--- a/z_calibration.cfg
+++ b/z_calibration.cfg
@@ -4,24 +4,24 @@
 [z_calibration]
 #   The X and Y coordinates (in mm) for clicking the nozzle on the
 #   Z endstop.
-probe_nozzle_x: 123
-probe_nozzle_y: 355
+probe_nozzle_x: 207
+probe_nozzle_y: 304
 #   The X and Y coordinates (in mm) for clicking the probe's switch
 #   on the Z endstop.
-probe_switch_x: 123
-probe_switch_y: 350
+probe_switch_x: 202
+probe_switch_y: 289
 #   The X and Y coordinates (in mm) for probing on the print surface
 #   (e.g. the center point) These coordinates will be adapted by the
 #   probe's X and Y offsets. The default is the relative_reference_index
 #   of the configured bed_mesh. It will raise an error if there is no
 #   probe_bed site and no bed_mesh with a relative_reference_index
 #   configured.
-probe_bed_x: 175
-probe_bed_y: 175
+probe_bed_x: 150
+probe_bed_y: 150
 #   The trigger point offset of the used mag-probe switch.
 #   This needs to be fined out manually.
 #   A smaller value is more away from bed
-switch_offset: 0.475
+switch_offset: 0.825
 #   The maximum allowed deviation of the calculated offset.
 #   If the offset exceeds this value, it will stop!
 #   The default is 1.0 mm.
@@ -61,20 +61,25 @@ speed: 300
 #   If true, the first probing is done faster by the probing speed.
 #   This is to get faster down and the result is not recorded as a
 #   probing sample. The default is false.
-probing_first_fast: true
+probing_first_fast: false
 #   A list of G-Code commands to execute prior to each calibration command.
 #   See docs/Command_Templates.md for G-Code format. This can be used to
 #   attach the probe.
-start_gcode: _SET_Z_CURRENT VAL=HOME
-             DETACH_PROBE
+start_gcode: 
+    status_calibrating_z
+    _SET_Z_CURRENT VAL=HOME
+    DETACH_PROBE
 #   A list of G-Code commands to execute prior to each probing on the
 #   mag-probe. See docs/Command_Templates.md for G-Code format. This can be
 #   used to attach the probe after probing on the nozzle and before probing
 #   on the mag-probe.
-before_switch_gcode: ATTACH_PROBE
-                     G0 Z20
+before_switch_gcode:    
+    ATTACH_PROBE
+    G0 Z20
 #   A list of G-Code commands to execute after each calibration command.
 #   See docs/Command_Templates.md for G-Code format. This can be used to
 #   detach the probe afterwards.
-end_gcode: _SET_Z_CURRENT
-           DETACH_PROBE
+end_gcode: 
+    _SET_Z_CURRENT
+    DETACH_PROBE
+    status_ready
