--- a/park_macro.cfg
+++ b/park_macro.cfg
@@ -23,6 +23,7 @@ gcode:
   G90                   # absolute positioning
   G0 X{user.park[pos].x} Y{user.park[pos].y} Z{user.park[pos].z} F{user.speed.travel}
   {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
+  status_ready
 
 # #####################################################################
 # #                   Added Items to the Stock menu                   #
