--- a/printer.cfg
+++ b/printer.cfg
@@ -59,6 +59,7 @@ square_corner_velocity: 5.0
 # # #   Display & Custom Menu
 # [include lcd.cfg]
 # [include display_menu.cfg]
+[include led_macros.cfg]
 
 #  Macros
 [include basic_macro.cfg]
@@ -70,7 +71,7 @@ square_corner_velocity: 5.0
 [include webclient.cfg]
 
 # # Power relays
-#[include power.cfg]
+[include power.cfg]
 
 #  print and service time storage
 [include printtime.cfg]
@@ -125,7 +126,7 @@ gcode:
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
   {% if printer.save_variables.variables.filament_sensor %} _RESTORE_FILAMENT_SENSOR {% endif %}
   {% if user.hw.filter.ena %} _CHECK_FILTER {% endif %}
-  {% if user.hw.relay,ena %} _HEATER_ON {% endif %}
+  #{% if user.hw.relay,ena %} _HEATER_ON {% endif %}
   {% if user.hw.display.ena %} UPDATE_DELAYED_GCODE ID=_DISPLAY_INIT DURATION=2 {% endif %}
   _PRINT_AR T="Klipper INIT done"
 
@@ -177,7 +178,7 @@ gcode:
   #{% set user_z_endstop_xy = [232.0,355.0] %}  # z Endstop position insight right profil
   {% set user_z_endstop_xy = [207.0,304.0] %}  # z Endstop position insight left profil
   {% set user_z_endstop_hop = 7.5 %}           # z hop for moves e.g homimg
-  {% set user_z_home_current = 0.3 %}          # reduced homing curent for z
+  {% set user_z_home_current = 0.35 %}          # reduced homing curent for z
   {% set user_home_accel = 1200 %}             # reduced ACCEL for homing
   {% set user_bed_y_offset = 5 %}              # Endstop offset to bed max y
   ##### all user defined speeds [mm/sec] #####
@@ -186,7 +187,7 @@ gcode:
   {% set user_travel_speed = 300 %}            # travel speed e.g park, dock ...
   {% set user_probe_dock_speed = 50 %}         # dock speed for attach/dock
   {% set user_filament_load_speed = 50 %}      # load/unload speed
-  {% set user_wipe_speed = 60 %}               # wipe move speed 
+  {% set user_wipe_speed = 200 %}               # wipe move speed 
   {% set user_prime_speed = 25 %}              # prime line speed  
   ##### Mag Probe #####
   {% set user_probe_dock_pos = [11,305] %}      # position of the dock 
@@ -198,7 +199,7 @@ gcode:
   {% set user_park_z_max_delta = 40 %}         # insure to do not hit cam in front
   {% set user_park_z_min = 30 %}               # minimal z from bed
   {% set user_park_pause_z_delta = 2.0 %}      # distance to increase head while PAUSE/CANCEL_PRINT
-  {% set user_park_at_cancel = False %}        # park head at CANCEL_PRINT if not paused [False/True]
+  {% set user_park_at_cancel = true %}        # park head at CANCEL_PRINT if not paused [False/True]
   ##### Filament #####
   {% set user_extruder_min_add = 30 %}         # Temperature add to min Extruder temp
   {% set user_load_distance = 90 %}            # load distance while load filament
@@ -207,12 +208,11 @@ gcode:
   {% set user_retract_end = 2 %}               # retract distance at PRINT_END or CANCEL_PRINT
   {% set user_retract_pause = 1 %}             # retract/extrude distance while PAUSE or RESUME
   ##### Purge & Brush #####
-  {% set user_brush_pos = 'right' %}           # left/right profile used
-  #{% set user__brush_x_middle = 100 %}        # mid point of brush at left profile
+  {% set user_brush_pos = 'left' %}           # left/right profile used
   {% set user_brush_x_middle = 136 %}          # mid point of brush at right profil
   {% set user_brush_x_width = 35 %}            # width of brush
   {% set user_brush_y_start = 305 %}           # start point at y
-  {% set user_wipe_z = -1 %}                  # z for wipe moves
+  {% set user_wipe_z = -1.2 %}                  # z for wipe moves
   {% set user_wipe_cnt = 5 %}                  # number of full wipes
   {% set user_z_purge = 2.5 %}                 # z above purge bucket
   ##### PRINT_START/STOP #####
@@ -224,7 +224,7 @@ gcode:
   {% set user_unload_sd = True %}              # unload sd file at PRINT_END or CANCEL_PRINT [True,False]
   ##### Prime Line #####
   {% set user_prime_start_xy = [5.0,30.0] %}   # x&y start coordinates of prime line
-  {% set user_prime_z = 0.34 %}                # default prime layer hight
+  {% set user_prime_z = 0.2 %}                # default prime layer hight
   {% set user_prime_dir = 'Y+' %}              # direction of prime line (X+, X-, Y+, Y-)
   {% set user_prime_spacing = 0.4 %}           # distance between line, move will allways positive
   {% set user_prime_length = 220 %}            # length of prime line
@@ -240,7 +240,7 @@ gcode:
   {% set user_filter_on = 0 %}               # filter on value
   {% set user_filter_use_time = 0 %}          # Nevermore change warning limit 
   {% set user_vent_on = 0 %}                  # chamber fan on temperature                        
-  {% set user_caselight_on = 0.4 %}            # caselight on value
+  {% set user_caselight_on = 0.2 %}            # caselight on value
   {% set user_fan_run_after_print = 0 %}      # time in min to run filter and chamber exhaust after print finsih 
   ###################################################################
   ##                      end of user defines                      ## 
@@ -398,4 +398,4 @@ gcode:
 #*# pid_kd = 494.358
 #*#
 #*# [stepper_z]
-#*# position_endstop = 0.050
+#*# position_endstop = -0.147
